feat:cleanu piplein for high level data setup (CMC-a578)